<resources>
    <string name="app_name">MC BG Scorepad</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="manage_scorepads">Manage templates</string>
    <string name="add_template">Add a template</string>
    <string name="new_template_name">Name of the new template</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="error_new_template_name_cannot_be_empty">The new template name cannot be empty.</string>
    <string name="error_new_template_already_exists">This template name already exists.</string>
    <string name="error_new_template_saving">Error while saving new template.</string>
    <string name="launch_newgame">New Game</string>
    <string name="no_selection">No selection</string>
    <string name="one_selected">selected</string>
    <string name="n_selected">selected</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="OK">OK</string>
    <string name="error_saving">Error while saving.</string>
    <string name="each_round">Each round</string>
    <string name="specific_rounds">At specific rounds</string>
    <string name="end_game">At the end of the game</string>
    <string name="add_score_each_round">Add at each round</string>
    <string name="add_score_specific_round">Add score at specific rounds</string>
    <string name="add_score_end_game">Add score at the end of the game</string>
    <string name="new_scoreline_name">Name</string>
    <string name="error_new_scoreline_name_cannot_be_empty">The new line name cannot be empty</string>
    <string name="error_new_scoreline_already_exists">This line already exists.</string>
    <string name="error_new_scoreline_saving">Error while saving the score line.</string>
    <string name="round">Round</string>
    <string name="roundlinename">Round scoring name</string>
    <string name="save">Save</string>
    <string name="choose_color">Choose a color</string>
    <string name="select">Select</string>
    <string name="colorLabel">Color:</string>
    <string name="scoring_conditions">Scoring conditions:</string>
    <string name="add_scoreline">Add a scoring condition</string>
    <string name="icon">Icon:</string>
    <string name="error_wrong_file_format">Wrong file format</string>
    <string name="roundgame_newgame">Round based game</string>
    <string name="template_newgame">Score sheet based game</string>
    <string name="edit_template">Edit template</string>
    <string name="edit_scoreline">Edit score condition</string>
    <string name="select_game_type">Select a type of game</string>
    <string name="select_game_template">Select a game</string>
    <string name="players">Players</string>
    <string name="quit_game">Quit game?</string>
    <string name="quit_game_warning">Do you really want to quit the game?</string>
    <string name="add_player">Add a player</string>
    <string name="manage_players">Manage Players</string>
    <string name="new_player_name">Player\'s name</string>
    <string name="error_new_player_name_cannot_be_empty">The player\'s name cannot be empty</string>
    <string name="input_score">Input a score</string>
    <string name="error_value_cannot_be_empty">Value cannot be empty</string>
    <string name="final_scores">Final score</string>
    <string name="error_invalid_score_format">Invalid score format</string>
    <string name="no_calculator">No calculator app found</string>
    <string name="starting_points">Starting points: </string>
    <string name="new_round">New round</string>
    <string name="roundheader">Round: </string>
    <string name="export">Export</string>
    <string name="menuimport">Import</string>
    <string name="fileNotFound">File not found</string>
    <string name="error_reading_file">Error reading file</string>
    <string name="invalid_file_format">Invalid file format</string>
</resources>