<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".templates.FragmentScorelineEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start|top"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/saveScoreline_button"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newScoreNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_scoreline_name" />

        <EditText
            android:id="@+id/newScorelineInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/newScoreColortext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"
                android:text="@string/colorLabel" />
            <Button
                android:id="@+id/newScoreColorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="       "
                android:backgroundTint="@color/gray"
                android:layout_centerVertical="true"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/newScoreIconLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"
                android:text="@string/icon" />
            <ImageView
                android:id="@+id/newScoreIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_gallery" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/saveScoreline_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>