<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".roundbasedgame.FragmentRoundGameMain">

    <LinearLayout
        android:id="@+id/scoresheetScoresLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/scoresheetScoresLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_points" />

            <Button
                android:id="@+id/buttonStartingPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/expandableScoresListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            android:layoutDirection="rtl"
            android:indicatorRight="?android:attr/expandableListPreferredItemIndicatorRight" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/newRoundbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_round"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/finalScoresbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/final_scores"
            android:layout_weight="1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>